prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phonebook-api-service-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: phonebook-api-server.app.fcgm.pro
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phonebook-api-service
            port:
              number: 31506
